# trucov

./: .hgignore  CMakeLists.txt  README
config/: default_trucovrc  sel_trucovrc
debian/: changelog  control  copyright  qtrucov.install  trucov.install
demo/complex/include/: command.h  config.h  coverage_creator.h  dot_creator.h  gcda_actors.h  gcda_grammar.h  gcno_actors.h  gcno_grammar.h  parser.h  parser_builder.h  prims.h  record.h  selector.h  source_file.h  tru_utility.h
demo/complex/src/: command.cpp  config.cpp  coverage_creator.cpp  dot_creator.cpp  main.cpp  parser.cpp  parser_builder.cpp  record.cpp  selector.cpp  tru_utility.cpp
demo/simple/: README  coverage.dot
demo/simple/include/: cat.h  dog.h
demo/simple/src/: cat.c  main.cpp
docs/: concept_document.docx  qt_how_to.txt  trucov_manual.txt  trucov_poster.pptx
docs/design/unpublished/: component_diagram.dia  control_system.dia  data_flow.dia  parser_data_construction.dia  parser_data_model.dia  spirit_parser_class_diagram.xmi
docs/gui_design/: main_window.ui
docs/mentor_files/: Beta - Qt Creator - Lightweight IDE.url  Gcov - Using the GNU Compiler Collection (GCC).url  Itanium C++ ABI.url  gcov-dump
docs/release_notes/: README_09_08_24  README_09_09_07  README_09_10_05  README_09_11_02
gui/: CMakeLists.txt  codeeditor.cpp  codeeditor.h  compile.sh  highlighter.cpp  highlighter.h  install.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  proj_dia.cpp  proj_dia.h  proj_dia.ui  secretgui.h  svgview.cpp  svgview.h  svgwindow.cpp  svgwindow.h  tru_main.pro  ui_mainwindow.h
include/: parser_builder.h  tru_utility.h
profile/: results.oprofile
sample_projects/: README  Test cases
sample_projects/Assignment1/: Makefile  README.TXT  binary_search_tree.cpp  binary_search_tree.gcno  binary_search_tree.h  main.cpp  main.gcno  test_drivers.cpp  test_drivers.gcno  test_drivers.h
sample_projects/simple_tests/Assert/src/: assert.cpp
sample_projects/simple_tests/Constructor/: constructor.cpp  constructor.gcda  constructor.gcno  constructor.h  test.cpp  test.gcda  test.gcno
sample_projects/simple_tests/Exception/src/: exception.cpp
sample_projects/simple_tests/Exit/include/: foo.h
sample_projects/simple_tests/Exit/src/: exit.cpp
sample_projects/simple_tests/Fallthrough/src/: fall.cpp
sample_projects/simple_tests/Fraction/: Fraction.gcda  Fraction.gcno  Fraction.h  Fraction.m  FractionTest.gcda  FractionTest.gcno  FractionTest.m
sample_projects/simple_tests/Func/src/: func.cpp
sample_projects/simple_tests/Ifelse/src/: ifelse.cpp
sample_projects/simple_tests/Ifelseifelseifelse/src/: ifelseifelseifelse.cpp  ifelseifelseifelse.gcda  ifelseifelseifelse.gcno
sample_projects/simple_tests/Iffalse/: iffalse.cpp
sample_projects/simple_tests/Iftrue/src/: iftrue.cpp
sample_projects/simple_tests/Switch/src/: extra.cpp  switch.cpp
sample_projects/simple_tests/crazy_include/: src##func.h.trucov  src##test.cpp.trucov
sample_projects/simple_tests/crazy_include/src/: crazy_include.inl  func.h  test.cpp
sample_projects/simple_tests/hello/: hello.gcda  hello.gcno
sample_projects/simple_tests/hw1/src/: hw1.c
sample_projects/simple_tests/local dir tests/: main.cpp  main.gcda  main.gcno  test.gcda  test.gcno
sample_projects/simple_tests/local dir tests/dir/: test.cpp  test.h
sample_projects/simple_tests/multiplesrc/: multiplesrc.cpp  multiplesrc.gcda  multiplesrc.gcno  src.h  src1.cpp  src1.gcda  src1.gcno  src2.cpp  src2.gcda  src2.gcno  src3.cpp  src3.gcda  src3.gcno  src4.cpp  src4.gcda  src4.gcno  src5.cpp  src5.gcda  src5.gcno
sample_projects/simple_tests/prog_include/: include##util.h.selcov  src##prog.cpp.selcov  src##util.cpp.selcov
sample_projects/simple_tests/prog_include/include/: util.h
sample_projects/simple_tests/prog_include/src/: prog.cpp  util.cpp
scripts/: dot_to_pdf  svn_revision_script.sh  testing_framework.sh
src/: config.cpp  parser_builder.cpp  tru_utility.cpp  unix_utility.cpp
test/functional_test/: all_functionaltest.cpp  all_report_functionaltest.cpp  cmd_config_override_functionaltest.cpp  cmd_line_options_functionaltest.cpp  config_options_functionaltest.cpp  dot_functionaltest.cpp  dot_report_functionaltest.cpp  graph_functionaltest.cpp  graph_report_functionaltest.cpp  helper_functionaltest.cpp  helper_functionaltest.h  list_status_functionaltest.cpp  parse_behavior_functionaltest.cpp  project_setup_functionaltest.cpp  report_functionaltest.cpp  selection_functionaltest.cpp
test/gtest/: gtest-all.cc  gtest-death-test.cc  gtest-port.cc  gtest-test-part.cc  gtest.cc
test/resources/BST/: .__secret_gui__  bst.cpp  bst.gcda  bst.gcno  bst.h  coverage.dot  driver.cpp  driver.gcda  driver.gcno  makefile  old_makefile
test/resources/BST/.secret_gui_dir/: bst.cpp##_GLOBAL__I__ZN4NodeC2Ev.trucov  bst.cpp##_Z41__static_initialization_and_destruction_0ii.trucov  bst.cpp##_ZN3Bst10delete_minEPP4Node.trucov  bst.cpp##_ZN3Bst10post_orderEP4Node.trucov  bst.cpp##_ZN3Bst11insert_treeER4Node.trucov  bst.cpp##_ZN3Bst11remove_nodeEPP4NodeRi.trucov  bst.cpp##_ZN3Bst11search_nodeERi.trucov  bst.cpp##_ZN3Bst12maximum_nodeEP4Node.trucov  bst.cpp##_ZN3Bst12minimum_nodeEP4Node.trucov  bst.cpp##_ZN3Bst5printEv.trucov  bst.cpp##_ZN3Bst6insertEPP4NodeRS0_.trucov  bst.cpp##_ZN3Bst6removeERi.trucov  bst.cpp##_ZN3Bst6searchEPP4NodeRi.trucov  bst.cpp##_ZN3Bst8in_orderEP4Node.trucov  bst.cpp##_ZN3Bst9pre_orderEP4Node.trucov  bst.cpp##_ZN3BstC1Ev.trucov  bst.cpp##_ZN3BstC2Ev.trucov  bst.cpp##_ZN4NodeC1ERKS_.trucov  bst.cpp##_ZN4NodeC1ESsiSs.trucov  bst.cpp##_ZN4NodeC2ESsiSs.trucov  bst.cpp##_ZN4NodeC2Ev.trucov  (+8 more)
test/resources/F1/: CMakeLists.txt
test/unit_test/: all_unittest.cpp  command_unittest.cpp  config_unittest.cpp  coverage_creator_unittest.cpp  dot_creator_unittest.cpp  gcda_actors_unittest.cpp  gcda_grammar_unittest.cpp  gcno_actors_unittest.cpp  gcno_grammar_unittest.cpp  parser_builder_unittest.cpp  parser_unittest.cpp  prims_unittest.cpp  record_unittest.cpp  revision_script_manager_unittest.cpp  selector_unittest.cpp  utility_unittest.cpp
(+41 files in other folders)
